# projeto-calculadora

./: main.py  pyproject.toml
