[project]
name = "calculadora"
version = "0.1.0"
description = ""
authors = [
    {name = "adrianosdebarros",email = "adriano.sdebarros@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "reportlab (>=4.4.4,<5.0.0)",
    "streamlit (>=1.50.0,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "calculadora", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
